@@ -1,3 +1,12 @@
+2008-05-10  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_real_draw):
+	reset the translation on the cairo context. Resurrects brush
+	emblems which were drawn in the wrong position.
+
+	* app/widgets/gimpviewrendererbrush.c (gimp_view_renderer_brush_draw):
+	formatting.
+
 2008-05-10  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/gtm.c: renamed...
